oil filter page added

--- a/blog.html
+++ b/blog.html
@@ -370,6 +370,23 @@
         </div>
     </main>
 
+    <main class="links">
+        <div class="link1">
+            <a href="oil_filter.html">
+                <img src="Oil Filter.png" alt="tires" class="imgh">
+            </a>
+            </div>
+            <div class="link2">
+            <a href="oil_filter.html">  
+            <p>
+                The car wheel is one of the essential parts of a vehicle. It produces a rotatory function and moves the car 
+                 from one point to another. Since their invention, car wheels have changed various designs, styles and structures.  
+                The car gets the leverage it needs to move by the wheel, transferring power from...
+            </p>
+        </a>
+        </div>
+    </main>
+
     
     <footer>
         <p>Socials</p>
