day I came by 2:00pm

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
         <div class="right">
             <div class="top">
                 <div class="top1">
-                        <a href=""><img src="toyota_logo.png" alt=""></a>
+                        <a href="toyotablog.html"><img src="toyota_logo.png" alt=""></a>
                         <a href=""><img src="lexus_logo.png" alt=""></a>
                         <a href=""><img src="benz_logo.png" alt=""></a>
                         <a href=""><img src="bmw_logo.png" alt=""></a>
@@ -34,7 +34,7 @@
                         <a href=""><img src="volvo_logo-removebg-preview.png" alt=""></a>
                 </div>
                 <div class="top2">
-                        <a href="" class="more">
+                        <a href="see_more.html" class="more">
                             <i class="fa-solid fa-arrow-right"></i><span>see more</span>
                         </a>
                 </div>
@@ -66,7 +66,7 @@
             <a href=""><img src="chevrolet_logo.png" alt="">Chevrolet</a>
             <a href=""><img src="ford_logo.png" alt="">Ford</a>
             <a href=""><img src="volkswagen_logo.png" alt="">Volkswagen</a>
-            <a href="" style="display: flex; justify-content: center; padding-right: 10px;">more <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="see_more.html" style="display: flex; justify-content: center; padding-right: 10px;">more <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="showlist2">
             <a href="">ufuhfufh</a>
@@ -131,8 +131,8 @@
                                 <img src="gearbox.jpg" alt="">
                             </div>
                             <div class="link-x-2">
-                                <p>Hike in the price of car parts call for quick action from e-autopartstore</p>
-                                <p>Visit <span id="eautos">e-autopartstore</span> to checkout affordable parts. Place orders right from the comfort of you home, we'll alwats be there to deliver</p>
+                                <p>Hike in the price of car parts call for quick action from e-autopartstore.</p>
+                                <p>Visit <span id="eautos">e-autopartstore</span> to checkout affordable parts. Place orders right from the comfort of you home, we'll always be there to deliver.</p>
                             </div>
                         </a>
                     </div>
@@ -141,30 +141,30 @@
                         <div class="things2-1-2-1">
                             <a href="">
                                 <div class="ghoul1">
-                                    <img src="poster2.jpg" alt="">
+                                    <img src="Clutch-600x360 (1).jpeg" alt="article">
                                 </div>
                                 <div class="ghoul2">
-                                    <p>Check out the affordable Zurich alternator prices...</p>
+                                    <p>Clutches in a giffy. What's it telling you and what are the actions you should take...</p>
                                 </div>
                             </a>    
                         </div>
                         <div class="things2-1-2-1">
                             <a href="">
                                 <div class="ghoul1">
-                                    <img src="poster2.jpg" alt="">
+                                    <img src="Automotive-Sensors.jpg" alt="article">
                                 </div>
                                 <div class="ghoul2">
-                                    <p>Check out the affordable Zurich alternator prices...</p>
+                                    <p>The third eye as it is popularly called, allows you to know the state of your auto at any poin in time...</p>
                                 </div>
                             </a>    
                         </div>
                         <div class="things2-1-2-1">
                             <a href="">
                                 <div class="ghoul1">
-                                    <img src="poster2.jpg" alt="">
+                                    <img src="tire_thread.jpg" alt="article">
                                 </div>
                                 <div class="ghoul2">
-                                    <p>Check out the affordable Zurich alternator prices...</p>
+                                    <p>Tire thread rejuvenation; grip the road, own the journey...</p>
                                 </div>
                             </a>    
                         </div>
@@ -174,17 +174,17 @@
                 <div class="things2-2">                       
                         <div class="inner">
                             <a href="">
-                            <i class="fa-regular fa-file-lines"></i>Precious has a big head abela wa wa ka ma lo to my kondo, no ko me jo. i...
+                            <i class="fa-regular fa-file-lines"></i>Unlock your vehicle story: The power of VIN analysis...
                             </a>
                         </div>
                         <div class="inner">
                             <a href="">
-                            <i class="fa-regular fa-file-lines"></i>Precious has a big head abela wa wa ka ma lo to my kondo, no ko me ...
+                            <i class="fa-regular fa-file-lines"></i>Mastering the Art of Hand Brakes: From Technique to...
                             </a>
                         </div>
                         <div class="inner">
                             <a href="">
-                            <i class="fa-regular fa-file-lines"></i>Precious has a big head abela wa wa ka ma lo to my kondo, no ko me...
+                            <i class="fa-regular fa-file-lines"></i>Shift into Style: Exploring the Evolution of Gear Knobs...
                             </a>
                         </div>
                 </div>
@@ -209,40 +209,28 @@
        <div class="container1">
             <div class="tab1" id="scrollingContent">
                 <a href="">
-                    <div><img src="gearbox.jpg" alt=""></div>
-                    <div>uyfgfguyfejifuffuifueffh</div>
+                    <div><img src="gear_knob112.webp" alt=""></div>
+                    <div>Crafted for Comfort, Engineered for control: A deep dive into gear knob. Explore the ...</div>
                 </a>
                 <a href="">
-                    <div><img src="Alternator.png" alt=""></div>
-                    <div>ifgtitrkoiji</div>
+                    <div><img src="alternator-update3-1.jpg" alt=""></div>
+                    <div>Powering Your Ride: Inside the Alternator's Realm. Delve into the Heart of Your Vehicle's Electrical System, Unraveling the Secrets of Power Generation and Reliability.</div>
                 </a>
                 <a href="">
-                    <div><img src="cylinder block.jpg" alt=""></div>
-                    <div>kjhjtrijtigjgrlkgrk</div>
+                    <div><img src="wheels.jpg" alt=""></div>
+                    <div>Where your car meets the road</div>
                 </a>
                 <a href="">
-                    <div><img src="cooling systems.jpeg" alt=""></div>
-                    <div>kjtrjtrjtjrt</div>
+                    <div><img src="cylinder_block2.jpeg" alt=""></div>
+                    <div>Forged in Strength: Exploring the Foundation of Your Engine - The Cylinder Block. From Material Science to Precision Machining, Discover the Backbone of Performance and Durability.</div>
                 </a>
                 <a href="">
-                    <div><img src="semi-metallic-brakepads-removebg-preview.png" alt=""></div>
-                    <div>,nbkfnklfnkffklfnk</div>
+                    <div><img src="brakes2.jpg" alt=""></div>
+                    <div>Brake Mastery Unveiled: Delving Deep into the Art and Science of Braking Systems. From Pad to Pedal, Unravel the Secrets Behind Safety, Performance, and Control.</div>
                 </a>
                 <a href="">
-                    <div><img src="winter_tire-removebg-preview.png" alt=""></div>
-                    <div>lf.l;lfblbmlblbl</div>
-                </a>
-                <a href="">
-                    <div><img src="winter_tire-removebg-preview.png" alt=""></div>
-                    <div>lf.l;lfblbmlblbl</div>
-                </a>
-                <a href="">
-                    <div><img src="winter_tire-removebg-preview.png" alt=""></div>
-                    <div>lf.l;lfblbmlblbl</div>
-                </a>
-                <a href="">
-                    <div><img src="winter_tire-removebg-preview.png" alt=""></div>
-                    <div>lf.l;lfblbmlblbl</div>
+                    <div><img src="tires2.jpg" alt=""></div>
+                    <div>Tire Chronicles: Navigating the Road of Rubber. Discover the Secrets Within Each Tread, Uncover the Science Behind Grip, Durability, and Performance, and Explore the Journey of Your Vehicle, One Rotation at a Time.</div>
                 </a>
             </div>
             <div class="tab2">
