the warning lights page

--- a/sensors.html
+++ b/sensors.html
@@ -55,8 +55,6 @@
         <div class="content">
             <img src="sensored car.webp" alt="sensored car" id="disc" style="border-radius: 10px;" width="500px">
 
-            <br><br>
-
             <p>
                 A car sensor is an electronic device that monitors various aspects of the vehicle and transmits data to the driver or ECU(Electronic Control Unit). In certain cases, the ECU makes modifications based on the data received from the sensor.    
             </p>
@@ -67,9 +65,8 @@
 
            <p>
             A car contains a few sensors that monitor various aspects of the vehicle and transmit data to the driver or ECU(Electronic Control Unit) . In this post, we will discuss numerous types of sensors in a vehicle and their capabilities.
-           </p>
-
             <br><br>
+           </p>
 
             <h2>
                 <strong>CATEGORIES OF CAR SENSORS</strong> 
@@ -99,13 +96,13 @@
 
             <p>
                 * VOLTAGE SENSORS 
+                <br><br>
             </p>
 
             <p>
                 Each of these sensors serves a specific purpose, contributing to the overall functionality, safety, and comfort of the vehicle. They continuously gather data and send signals to the vehicle's control units to make necessary adjustments.
+                <br><br>
             </p>
-
-            <br><br>
 
             <h2>
                 TYPES OF ENGINE SENSORS 
@@ -207,44 +204,42 @@
 
           <h2>
               TYPES OF SAFETY SENSORS 
+              <br>
           </h2>
-
-          <br>
 
           <p>
               <strong>- The Anti-lock Braking System (ABS):</strong> 
               The Anti-lock Braking System (ABS) is a crucial safety feature in modern vehicles designed to prevent wheels from locking up during braking, thereby maintaining traction with the road surface and allowing the driver to maintain steering control.
-              <img src="" alt="" style="display: block;">
+              <br>
           </p>
 
           <P>
              <strong>- Traction Control System (TCS):</strong> 
              Traction Control System (TCS) is a vehicle safety feature designed to prevent wheel spin during acceleration on slippery or low-traction surfaces. It works by detecting when one or more wheels are spinning faster than the others, indicating a loss of traction, and then intervening to reduce engine power and/or apply braking force to the spinning wheel(s).
-             <img src="" alt="" style="display: block;">
+             <br>
           </P>
 
            <P>
                <strong>- Electric Stability Control (ESC):</strong> 
                Electric Stability Control (ESC), also known as Electronic Stability Control or Vehicle Stability Control (VSC), is an advanced safety feature in vehicles designed to help drivers maintain control during extreme steering maneuvers or in slippery road conditions. ESC uses various sensors and electronic control systems to detect and mitigate situations where the vehicle begins to lose directional stability
-               <img src="" alt="" style="display: block;">
+               <br>
            </P>
 
             <P>
                <strong>- Airbag sensors:</strong> 
                Airbag sensors are integral components of a vehicle's safety system, responsible for detecting the severity and nature of a collision and triggering the deployment of airbags when necessary.
-               <img src="" alt="" style="display: block;">
+               <br>
            </P>
 
            <p>
               <strong>- Tire Pressure Monitoring System (TPMS):</strong> 
                A Tire Pressure Monitoring System (TPMS) is a safety feature in vehicles designed to monitor the air pressure in the tires and alert the driver if the pressure in any tire drops below a predetermined threshold. TPMS helps improve vehicle safety, fuel efficiency, and tire longevity by ensuring that tires are properly inflated.
-               <img src="" alt="" style="display: block;">
+              <br><br>
            </p>
-
-           <br><br>
 
             <h2>
               TYPES OF FLUID MONITORING SENSORS 
+              <br>
             </h2>
 
             <br>
@@ -283,9 +278,8 @@
             <strong>- Washer fluid level sensor:</strong>
             The washer fluid level sensor is a component of a vehicle's washer fluid system responsible for monitoring the level of washer fluid in the washer fluid reservoir. Its primary function is to provide feedback to the driver or the vehicle's onboard computer regarding the washer fluid level status.
             <img src="Washer_fluid_level_sensor-removebg-preview.png" alt="Washer fluid level sensor" style="display: block;" id="sensor">
+            <br>
            </p>
-
-         <br><br>
 
             <h2>
                TYPES OF ENVIRONMENTAL SENSORS
@@ -316,16 +310,12 @@
            <p>
               <strong>- Particulate matter (PM) sensor:</strong> 
               A particulate matter (PM) sensor, also known as a particulate matter sensor or particle sensor, is a component of a vehicle's emissions control system designed to monitor the concentration of particulate matter in the exhaust gases. Its primary function is to provide feedback to the vehicle's onboard computer regarding the level of particulate emissions, particularly for diesel-powered vehicles equipped with diesel particulate filters (DPF) or gasoline vehicles with gasoline particulate filters (GPF).
-              <img src="" alt="" style="display: block;">
+              <br><br>
            </p>
-    
-           <br><br>
 
             <h2>
-                TYPES OF SECURITY SENSORS 
+                TYPES OF SECURITY SENSORS <br>
             </h2>
-
-            <br>
 
             <p>
                 <strong>- Vehicle Immobilizer System Sensor:</strong>
@@ -340,7 +330,7 @@
             <p>
                 <strong>- Motion Sensors:</strong>
                 These sensors detect motion within a designated area. They can be passive infrared (PIR) sensors, which detect changes in infrared radiation caused by movement, or they can use other technologies like ultrasonic or microwave sensors. Motion sensors are commonly used in indoor spaces to detect intruders.
-                <img src="" alt="" style="display: block;">
+                <br><br>
             </p>
 
             <br><br>
@@ -383,9 +373,8 @@
                 <strong>- Automatic Climate Control Sensors</strong>
                 Automatic climate control sensors are components of a vehicle's HVAC (Heating, Ventilation, and Air Conditioning) system that monitor various environmental factors inside and outside the vehicle to maintain a comfortable cabin temperature automatically. These sensors work together to regulate the temperature, airflow, and other climate control settings based on the preferences of the occupants and the current conditions.
                 <img src="Automatic Climate Control Sensors.webp" alt="automatin cliamte control sensor" style="display: block;" id="sensor">
+                <br>
               </p>
-
-              <br><br>
 
               <h2>
                 TYPES OF VOLTAGE SENSORS 
